fix: fix input alignment

--- a/src/pages/PsychologistCalendar/styles.css
+++ b/src/pages/PsychologistCalendar/styles.css
@@ -71,7 +71,7 @@
 
 .psychologistcalendar .table-right .schedule-item input{
     color: #07387e;
-    align-self: ce;
+    align-self: center;
     height: 35px;
     width: 150px;
     border-radius: 8px;
